objects/disco__Form_Template__c.object
<CustomObject>
    <description>The core container object for Youreka. A collection of Sections and Questions to be saved and published, used by end users to create Forms</description>
    <fields>
        <fullName>FSL_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Approved</fullName>
                    <default>true</default>
                    <label>Not Yet Approved</label>
                </value>
                <value>
                    <fullName>In Approval Process</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Approved_By_User__c</fullName>
        <label>Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Approved_On__c</fullName>
        <label>Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL_Document_Number__c</fullName>
        <label>Document Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Status__c</fullName>
        <formula>text(disco__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Auto_Archive_Days__c</fullName>
        <description>Value, in number of days, which determines when a Form created from the Template should its status of Locked automatically changed to Archived.Use 0 for no auto archiving.</description>
        <inlineHelpText>Number of days before a submitted form is automatically archived.Use 0 for no auto archiving.</inlineHelpText>
        <label>Auto Archive Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Auto_Lock_Days__c</fullName>
        <description>Value, in number of days, which determines when a Form created from the Template should its status of Submitted automatically changed to Locked.Use 0 for no auto locking.</description>
        <inlineHelpText>Number of days before a submitted form is automatically locked.Use 0 for no auto locking.</inlineHelpText>
        <label>Auto Lock Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Autocreate_Discoveries__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, create Discoveries automatically in a full save. If unchecked, select which Discoveries to create after locking the form.</description>
        <inlineHelpText>If checked, create Discoveries automatically in a full save. If unchecked, select which Discoveries to create after locking the form.</inlineHelpText>
        <label>Auto-create Discoveries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__CSS_CompleteForm__c</fullName>
        <description>Contains custom CSS for modifying the appearance of the Complete Form page.</description>
        <label>CSS CompleteForm</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__CSS_FormDetail__c</fullName>
        <description>Contains custom CSS for modifying the appearance of the Complete Form page.</description>
        <label>CSS FormDetail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Cancel_Button_Label__c</fullName>
        <inlineHelpText>Override the label for the cancel button in Complete Form page</inlineHelpText>
        <label>Cancel Button Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Cancel_Label_Mobile__c</fullName>
        <description>override for cancel button in youreka mobile app</description>
        <inlineHelpText>override for cancel button in youreka mobile app</inlineHelpText>
        <label>Cancel Label Mobile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Color__c</fullName>
        <description>background color that will be used on contacts forms</description>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Dependent_Question_Values__c</fullName>
        <description>Dependency Logic for displaying the Forms, set by Template Builder</description>
        <inlineHelpText>Dependency Logic for displaying the Forms, set by Template Builder</inlineHelpText>
        <label>Dependent Question Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Enable_Form_PDFs__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Boolean that allows admins to decide if users can create PDFs from forms created by that template.</description>
        <label>Enable Form PDFs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Filter_Logic__c</fullName>
        <description>User input string of Filter Logic for Dependent Forms</description>
        <inlineHelpText>User input string of Filter Logic for Dependent Forms</inlineHelpText>
        <label>Filter Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Full_Form_Size__c</fullName>
        <description>Size of of Template for mobile synch</description>
        <inlineHelpText>Size of of Template for mobile synch</inlineHelpText>
        <label>Full Form Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Generate_PDF_Label_Mobile__c</fullName>
        <description>override for generate PDF button in youreka mobile app</description>
        <inlineHelpText>override for generate PDF button in youreka mobile app</inlineHelpText>
        <label>Generate PDF Label Mobile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Inbound_Deeplink_Parameters__c</fullName>
        <description>Parameters for inbound deeplinks to populate answers.</description>
        <inlineHelpText>Parameters for inbound deeplinks to populate answers.</inlineHelpText>
        <label>Inbound Deeplink Parameters</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Label_Alignment__c</fullName>
        <label>Label Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Right</fullName>
                    <default>true</default>
                    <label>Right</label>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Managed_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this template is a managed template. Managed template serve as building blocks for other templates, and do not have forms directly created for them.</description>
        <inlineHelpText>Indicates whether this template is a managed template. Managed template serve as building blocks for other templates, and do not have forms directly created for them.</inlineHelpText>
        <label>Managed Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Mobile_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Mobile_Icon__c</fullName>
        <description>SLDS icon selected to represent this template</description>
        <inlineHelpText>SLDS icon selected to represent this template</inlineHelpText>
        <label>Mobile Icon</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__New_Form_Fieldsets__c</fullName>
        <description>Contains a JSON representation of the field sets used on new form lookups on mobile.</description>
        <inlineHelpText>Contains a JSON representation of the field sets used on new form lookups on mobile.</inlineHelpText>
        <label>New Form Fieldsets</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Premium_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Template that requires premium</description>
        <label>Premium Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Public_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this template is available for use on public force.com sites</description>
        <inlineHelpText>this template is available for use on public force.com sites</inlineHelpText>
        <label>Public Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Quick_Save_Button_Label__c</fullName>
        <inlineHelpText>Override the label for the Quick Save button in Complete Form page</inlineHelpText>
        <label>Quick Save Button Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Quick_Save_Label_Mobile__c</fullName>
        <description>override for quick save button in youreka mobile app</description>
        <inlineHelpText>override for quick save button in youreka mobile app</inlineHelpText>
        <label>Quick Save Label Mobile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__RandomId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Randomly generated external Id for the template</description>
        <externalId>true</externalId>
        <label>RandomId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>disco__Rels_Allowing_Inserts__c</fullName>
        <description>Field link relationships that allow new record inserts when creating a form</description>
        <inlineHelpText>Field link relationships that allow new record inserts when creating a form</inlineHelpText>
        <label>Relationships Allowing Inserts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Remove_Mobile_Avail_Days__c</fullName>
        <description>Timeframe, in days, when a Form with the status of Submitted should have its Mobile_Available__c value set to false.Use 0 if Mobile Available should not be automatically removed.</description>
        <inlineHelpText>Number of days before a submitted form is automatically removed from mobile.Use 0 if Mobile Available should not be automatically removed.</inlineHelpText>
        <label>Remove Mobile Avail Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>disco__Save_Button_Label__c</fullName>
        <inlineHelpText>Override the label for the Save button in Complete Form page</inlineHelpText>
        <label>Save Button Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Save_Label_Mobile__c</fullName>
        <description>override for save button in youreka mobile app</description>
        <inlineHelpText>override for save button in youreka mobile app</inlineHelpText>
        <label>Save Label Mobile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Share_with_Community__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to make this form available to other Youreka users</inlineHelpText>
        <label>Share with Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drafting</fullName>
                    <default>true</default>
                    <label>Drafting</label>
                </value>
                <value>
                    <fullName>In Use</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Submit_Desktop_Context__c</fullName>
        <description>details for desktop submission destination</description>
        <inlineHelpText>Details for Desktop Submission Destination</inlineHelpText>
        <label>Submit Desktop Context</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Submit_Desktop_Destination__c</fullName>
        <description>destination for form submissions on desktop</description>
        <inlineHelpText>Destination for Form Submissions on Desktop</inlineHelpText>
        <label>Submit Desktop Destination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Form Detail</fullName>
                    <default>true</default>
                    <label>Form Detail</label>
                </value>
                <value>
                    <fullName>Related Record</fullName>
                </value>
                <value>
                    <fullName>Visualforce Page</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Submit_Desktop_Parameters__c</fullName>
        <description>desktop submit parameters</description>
        <inlineHelpText>desktop submit parameters</inlineHelpText>
        <label>Submit Desktop Parameters</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Submit_Mobile_Action_Context__c</fullName>
        <description>additional details for submit mobile action</description>
        <inlineHelpText>Additional Details for Submit Mobile Action</inlineHelpText>
        <label>Submit Mobile Action Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Submit_Mobile_Action__c</fullName>
        <description>additional action for submit mobile behavior</description>
        <inlineHelpText>Additional action for Submit Mobile Behavior</inlineHelpText>
        <label>Submit Mobile Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>Quick Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Submit_Mobile_Context__c</fullName>
        <description>details for submit mobile desination</description>
        <inlineHelpText>Details for Submit Mobile Destination</inlineHelpText>
        <label>Submit Mobile Context</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Submit_Mobile_Destination__c</fullName>
        <description>Destination for Form Submissions on Mobile</description>
        <inlineHelpText>Destination for Form Submissions on Mobile</inlineHelpText>
        <label>Submit Mobile Destination</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Forms List</fullName>
                    <default>true</default>
                    <label>Forms List</label>
                </value>
                <value>
                    <fullName>Field Service Mobile</fullName>
                </value>
                <value>
                    <fullName>Salesforce Mobile</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Submit_Mobile_Parameters__c</fullName>
        <description>submit mobile parameters</description>
        <inlineHelpText>submit mobile parameters</inlineHelpText>
        <label>Submit Mobile Parameters</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Template_Size_Warning_Level__c</fullName>
        <description>Template Size Warning Level (highest)</description>
        <inlineHelpText>Template Size Warning Level (highest)</inlineHelpText>
        <label>Template Size Warning Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>disco__Template_Size_Warning__c</fullName>
        <description>Warning(s) given about the template size</description>
        <inlineHelpText>Warning(s) given about the template size</inlineHelpText>
        <label>Template Size Warning</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Use_Decimal_Linked_Section_Numbers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indications whether template uses decimal style or integer style Linked Section Number. Automatically set.</description>
        <inlineHelpText>Indications whether template uses decimal style or integer style Linked Section Number. Automatically set.</inlineHelpText>
        <label>Use Decimal Linked Section Numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__View_Insights_Label_Mobile__c</fullName>
        <description>override for view insights button in youreka mobile app</description>
        <inlineHelpText>override for view insights button in youreka mobile app</inlineHelpText>
        <label>View Insights Label Mobile</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Form Template</label>
    <listViews>
        <fullName>All_Approved_In_Use_Forms</fullName>
        <columns>NAME</columns>
        <columns>disco__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>FSL_Approval_Status__c</columns>
        <columns>FSL_Approved_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>disco__Status__c</field>
            <operation>equals</operation>
            <value>In Use</value>
        </filters>
        <label>All Approved In Use Forms</label>
    </listViews>
    <listViews>
        <fullName>Form_Templates_In_Draft_Status</fullName>
        <columns>NAME</columns>
        <columns>FSL_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>FSL_Approval_Status__c</columns>
        <columns>FSL_Approved_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>disco__Status__c</field>
            <operation>equals</operation>
            <value>Drafting</value>
        </filters>
        <label>Form Templates In Draft Status</label>
    </listViews>
    <listViews>
        <fullName>Form_Templates_Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>FSL_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>FSL_Approval_Status__c</columns>
        <columns>FSL_Approved_On__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>disco__Status__c</field>
            <operation>equals</operation>
            <value>In Use</value>
        </filters>
        <filters>
            <field>FSL_Approval_Status__c</field>
            <operation>equals</operation>
            <value>In Approval Process</value>
        </filters>
        <label>Form Templates Pending Approval</label>
    </listViews>
    <listViews>
        <fullName>disco__All</fullName>
        <columns>NAME</columns>
        <columns>FSL_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>FSL_Approval_Status__c</columns>
        <columns>FSL_Approved_On__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Form Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>